test/error/UnreachableDoWhile.ci
public static class Test
{
	public static bool Run()
	{
		do {
		} while (true);
		do { //ERROR: Unreachable statement
		} while (false);
	}
}
